<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context="android.teste.myplaces.Controller.ReportActivity">

    <TextView
        android:id="@+id/titleReport"
        android:textColor="@color/colorText"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleReport"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLocationRep"
        android:textColor="@color/colorAccent"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLocation"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleReport" />

    <TextView
        android:id="@+id/lblDelete"
        android:textColor="@color/colorAccent"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblVisits"
        android:layout_margin="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleReport" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblLocationRep">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutConteudoRep"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="aaaaaaaa"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="aaaaaaaa"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="aaaaaaaa"/>-->
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutVisitas"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:text="2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:text="2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:text="5"
                    />-->
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>