<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context="android.teste.myplaces.Controller.ManageActivity">

    <TextView
        android:id="@+id/titleManage"
        android:textColor="@color/colorText"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleManage"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLocationMng"
        android:textColor="@color/colorAccent"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLocation"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleManage" />

    <TextView
        android:id="@+id/lblDelete"
        android:textColor="@color/colorAccent"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDelete"
        android:layout_margin="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleManage" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblLocationMng">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutConteudoMng"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="aaaaaaaa"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="aaaaaaaa"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="aaaaaaaa"/>-->
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutDeletar"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
                <!--<ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:backgroundTint="@color/colorGrey"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:backgroundTint="@color/colorGrey"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:backgroundTint="@color/colorGrey"/>-->
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>